--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,18 @@
 language: node_js
 
-
- services:
- - docker
+services:
+  - docker
 
 node_js:
   - 12
 
 before_install:
-  - docker build -t nodetest .
-  - docker run -d -p 3000:8080 nodetest  
+  - docker build -t travistest .
+  - docker run -d -p 5000:8080 travistest
   - docker ps -a
+
+install:
+  - npm install
+    
+script:
+  - npm test
