--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "homepage": "https://github.com/pjanowski2000/TravisCiTest#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "jest": "^26.6.3"
+    "jest": "^26.6.3",
+    "supertest": "^6.1.3"
   },
   "jest": {
     "testEnvironment": "node",
